GitOps/base/applications/keda-sample/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: test-app
  name: test-app
  namespace: sample-keda-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-app
  template:
    metadata:
      labels:
        app: test-app
        type: keda-testing
    spec:
      containers:
      - name: prom-test-app
        image: quay.io/zroubalik/prometheus-app:latest
        imagePullPolicy: IfNotPresent
        securityContext:
          allowPrivilegeEscalation: false
          runAsNonRoot: true
          capabilities:
            drop:
              - ALL
          seccompProfile:
            type: RuntimeDefault
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: test-app
  annotations:
    prometheus.io/scrape: "true"
  name: test-app
  namespace: sample-keda-app
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    type: keda-testing
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: test-app
    app.kubernetes.io/instance: sample-keda-app
  name: sample-keda-app
  namespace: sample-keda-app
spec:
  host: >-
    sample-keda-app-sample-keda-app.apps.cluster-j2zlr.j2zlr.sandbox1899.opentlc.com
  port:
    targetPort: http
  to:
    kind: Service
    name: test-app
    weight: 100
  wildcardPolicy: None
